--- a/_config.yml
+++ b/_config.yml
@@ -27,17 +27,22 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: ""
 domain: peterszasz.github.io
 url: https://peterszasz.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
-#twitter_username: jekyllrb
-#github_username:  jekyll
+show_downloads: false
+github:
+  repository_url: https://github.com/PeterSzasz/
+  owner_url: https://peterszasz.github.io/
 
 # Build settings
 theme: jekyll-theme-midnight
 #theme: pages-themes/midnight@v0.2.0
-#remote_theme: https://github.com/ pages-themes/midnight@v0.2.0
+#remote_theme: https://github.com/pages-themes/midnight@v0.2.0
 plugins:
   - jekyll-feed
   #- jekyll-remote-theme
 show_excerpts: true
+
+#twitter_username: jekyllrb
+#github_username:  jekyll
 
 # Exclude from processing.
 # The following items will not be processed, by default.
